--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,150 +1,170 @@
-.navbar-inverse {
-  .navbar-nav>.open>a,
-  .navbar-nav>.open>a:focus,
-  .navbar-nav>.open>a:hover {
-    background-color: transparent;
-  }
-}
-@media (max-width: 900px) {
-  .navbar-inverse {
-    display: none;
-  }
-  .mega-menu {
-    display: none;
-  }
-}
 @media (min-width: 900px) and (max-width: 2440px) {
-  .mega-menu {
-    position: absolute;
-    top: 72px;
-    width: 100vw;
-    margin-left: -15px;
-    padding-top: 0;
-    padding-bottom: 0;
-    border-top: unset;
-    &--icon {
-      margin-top: 15px;
+  .center-nav {
+    background-color: #303030;
+    font-size: 1.2em;
+    .btn {
+      font-size: 1.2em !important;
+      color: $color-pf-white;
     }
-    &--spaces-list {
-      list-style: none;
-      .btn-link {
-        color: $color-pf-blue-400;
-        &:hover {
-          color: $color-pf-blue-400;
-        }
-      }
-      &_create-space {
-        a {
-          padding-left: 0;
-        }
-      }
-      &_action-block {
-        margin-top: 20px;
-        li {
-          margin-bottom: 10px;
-        }
-      }
-      &_space-name {
-        font-weight: 300;
-      }
-      &_details {
-        &-item {
-          padding-top: 10px;
-          padding-bottom: 5px;
-          border-right: 1px solid;
-          border-right-color: $color-pf-black-400;
-          border-bottom: 1px solid;
-          border-bottom-color: $color-pf-black-400;
-          &:last-of-type {
-            border-bottom: 0;
-          }
-        }
-      }
-      &_sections {
-        border-right: 1px solid;
-        border-right-color: $color-pf-black-400;
-        &-manage {
-          position: absolute;
-          bottom: -50px;
-          right: 15px;
-        }
-      }
-      &_action-item {
-        line-height: 2;
-      }
-      &_highlights {
-        transition: all .3s;
-      }
-      &_new-feature {
-        .mega-menu--spaces-empty-state {
-          img {
-            width: 50%;
-          }
-        }
-      }
-      .active-item {
-        color: $color-pf-blue;
-        &:before {
-          position: relative;
-          top: 20px;
-          content: '';
-          float: right;
-          margin-right: -10px;
-          width: 0;
-          height: 0;
-          border-left: 10px solid $color-pf-black-800;
-          border-top: 10px solid transparent;
-          border-bottom: 10px solid transparent;
-        }
-      }
+    .pficon-ok::before {
+      color: $color-pf-white;
     }
-    &--spaces-table {
-      &_header {
-        margin-top: 26px;
-        font-size: 2em;
-      }
-      &_body {
-        font-size: 1.3em;
-        line-height: 2;
-        ul {
-          padding-left: 0;
-          li {
+    // User Dropdown - center item
+    &--user-dropdown_list {
+      left: -40px;
+      padding-bottom: 0;
+      background-color: $color-pf-white;
+      .center-nav--user-list {
+        padding-left: 20px;
+        list-style: none;
+        p {
+          margin-bottom: 0;
+        }
+        &_section {
+          margin-top: 10px;
+          .fa-check-circle-o {
+            color: $color-pf-green-400;
+          }
+          ul {
+            padding-left: 0;
             list-style: none;
+            li {
+              height: 35px;
+              a {
+                color: $color-pf-black-800;
+                font-size: 1.3em;
+              }
+            }
           }
         }
-        .fa {
-          &:hover {
-            cursor: pointer;
+        &_last {
+          margin-top: 10px;
+          ul {
+            padding-left: 0;
+            list-style: none;
+            li {
+              height: 35px;
+              a {
+                color: $color-pf-black-800;
+                font-size: 1.3em;
+              }
+            }
+          }
+          width: 258px;
+          margin-left: -20px;
+          padding: 15px 20px;
+          background-color: $color-pf-black-200;
+        }
+      }
+    }
+    // Spaces Dropdown - right side
+    &--spaces-dropdown_list {
+      position: absolute;
+      top: 38px;
+      right: 0;
+      left: auto;
+      padding-bottom: 0;
+      .center-nav--user-list {
+        width: 225px;
+        padding-left: 10px;
+        list-style: none;
+        ul {
+          padding-left: 10px;
+          list-style: none;
+        }
+        &_last {
+          width: 225px;
+          margin-left: -10px;
+          padding: 5px;
+          background-color: $color-pf-black-200;
+          ul {
+            padding-left: 15px;
+            li {
+              display: grid;
+              grid-template-columns: 1fr;
+              grid-template-rows: auto;
+              align-items: baseline;
+              padding-top: 5px;
+              padding-bottom: 5px;
+            }
+          }
+        }
+        .recent-spaces-list {
+          &_empty {
+            color: transparent;
+          }
+          li {
+            display: grid;
+            grid-template-columns: 20px 1fr;
+            grid-template-rows: auto;
+            align-items: baseline;
+            padding-top: 5px;
+            padding-bottom: 5px;
+            a {
+              margin-top: -5px;
+              color: $color-pf-black;
+              font-size: 1.2em;
+            }
           }
         }
       }
     }
-    &--spaces-empty-state {
-      text-align: center;
-      h3 {
-        color: $color-pf-green;
-        font-style: italic;
+    &--center {
+      margin: auto;
+      height: 48px; //
+      padding-top: 10px; //
+      &_vertical-divider {
+        padding-right: 5px;
+        padding-left: 5px;
+      }
+      &_icon {
+        border-right: 1px solid $color-pf-black-300;
+      }
+      &_links {
+        margin-top: 9px;
+        padding-bottom: 5px !important;
+        font-size: 1.2em !important;
+        font-weight: 700;
+        &.active {
+          border-bottom: 3px solid $color-pf-blue;
+          color: $color-pf-blue !important;
+        }
       }
     }
-    &--search {
-      margin-right: 15px;
-      margin-left: 25px;
-      padding-top: 5px;
-      padding-right: 15px;
-      padding-bottom: 5px;
-      padding-left: 15px;
-      border-right: 1px solid;
-      border-left: 1px solid;
-      border-right-color: $color-pf-black-300;
-      border-left-color: $color-pf-black-300;
-      .dropdown-toggle {
-        margin-bottom: 6px;
-        padding-left: 0;
-      }
-      .dropdown-menu {
-        top: 25px !important;
-        left: 0 !important;
+    &--right {
+      display: inline-flex;
+      justify-content: space-evenly;
+      &_icon {
+        border-right: 1px solid $color-pf-black-300;
       }
     }
+    &--divider {
+      color: $color-pf-white;
+    }
+  }
+  .secondary-nav {
+    background-color: #303030;
+    height: 40px;
+    &--links {
+      a {
+        margin-right: 10px;
+        margin-left: 10px;
+      }
+      .btn {
+        font-size: 1.2em !important;
+        color: $color-pf-white;
+      }
+      .active {
+        color: $color-pf-blue;
+        border-bottom: 3px solid $color-pf-blue;
+      }
+    }
+  }
+  .left-dropdown {
+    position: absolute;
+    top: 38px;
+    right: auto !important;
+    left: -10px !important;
+    padding-bottom: 0;
   }
 }
