--- a/css/site.css
+++ b/css/site.css
@@ -2334,126 +2334,252 @@
   overflow: visible;
   clip: auto; }
 
-@media (min-width: 900px) and (max-width: 2440px) {
-  .center-nav {
-    background-color: #303030;
-    font-size: 1.2em; }
-    .center-nav .btn {
-      font-size: 1.2em !important;
-      color: #fff; }
-    .center-nav .pficon-ok::before {
-      color: #fff; }
-    .center-nav--user-dropdown_list {
-      left: -40px;
-      padding-bottom: 0;
-      background-color: #fff; }
-      .center-nav--user-dropdown_list .center-nav--user-list {
-        padding-left: 20px;
-        list-style: none; }
-        .center-nav--user-dropdown_list .center-nav--user-list p {
-          margin-bottom: 0; }
-        .center-nav--user-dropdown_list .center-nav--user-list_section {
-          margin-top: 10px; }
-          .center-nav--user-dropdown_list .center-nav--user-list_section .fa-check-circle-o {
-            color: #3f9c35; }
-          .center-nav--user-dropdown_list .center-nav--user-list_section ul {
-            padding-left: 0;
-            list-style: none; }
-            .center-nav--user-dropdown_list .center-nav--user-list_section ul li {
-              height: 35px; }
-              .center-nav--user-dropdown_list .center-nav--user-list_section ul li a {
-                color: #393f44;
-                font-size: 1.3em; }
-        .center-nav--user-dropdown_list .center-nav--user-list_last {
-          margin-top: 10px;
-          width: 258px;
-          margin-left: -20px;
-          padding: 15px 20px;
-          background-color: #ededed; }
-          .center-nav--user-dropdown_list .center-nav--user-list_last ul {
-            padding-left: 0;
-            list-style: none; }
-            .center-nav--user-dropdown_list .center-nav--user-list_last ul li {
-              height: 35px; }
-              .center-nav--user-dropdown_list .center-nav--user-list_last ul li a {
-                color: #393f44;
-                font-size: 1.3em; }
-    .center-nav--spaces-dropdown_list {
-      position: absolute;
-      top: 38px;
-      right: 0;
-      left: auto;
-      padding-bottom: 0; }
-      .center-nav--spaces-dropdown_list .center-nav--user-list {
-        width: 225px;
+.center-nav {
+  background-color: #303030;
+  font-size: 1.2em; }
+  .center-nav .btn {
+    font-size: 1.2em !important;
+    color: #fff; }
+  .center-nav .pficon-ok::before {
+    color: #fff; }
+
+.secondary-nav {
+  background-color: #303030;
+  height: 40px; }
+  @media (max-width: 900px) {
+    .secondary-nav {
+      overflow-x: auto; } }
+  .secondary-nav--links a {
+    margin-right: 10px;
+    margin-left: 10px; }
+  .secondary-nav--links .btn {
+    font-size: 1.2em !important;
+    color: #fff; }
+  .secondary-nav--links .active {
+    color: #0088ce;
+    border-bottom: 3px solid #0088ce; }
+
+@media (max-width: 900px) {
+  .nav-grid-right {
+    display: none !important; }
+  .center-nav .input-group-search {
+    width: 90%;
+    margin-bottom: 15px; }
+    .center-nav .input-group-search .btn {
+      font-size: 14px !important;
+      color: #030303 !important; }
+    .center-nav .input-group-search input {
+      height: 29px;
+      border: 1px solid #d1d1d1;
+      border-radius: 5px; }
+      .center-nav .input-group-search input:hover {
+        border-color: #0088ce; }
+    .center-nav .input-group-search .input-group-btn .btn-default {
+      background: transparent;
+      border-top-right-radius: 5px;
+      border-bottom-right-radius: 5px; }
+  .center-nav--user-dropdown_list {
+    left: -40px;
+    padding-bottom: 0;
+    background-color: #fff; }
+    .center-nav--user-dropdown_list .center-nav--user-list {
+      padding-left: 20px;
+      list-style: none; }
+      .center-nav--user-dropdown_list .center-nav--user-list p {
+        margin-bottom: 0; }
+      .center-nav--user-dropdown_list .center-nav--user-list_section {
+        margin-top: 10px; }
+        .center-nav--user-dropdown_list .center-nav--user-list_section .fa-check-circle-o {
+          color: #3f9c35; }
+        .center-nav--user-dropdown_list .center-nav--user-list_section ul {
+          padding-left: 0;
+          list-style: none; }
+          .center-nav--user-dropdown_list .center-nav--user-list_section ul li {
+            height: 35px; }
+            .center-nav--user-dropdown_list .center-nav--user-list_section ul li a {
+              color: #393f44;
+              font-size: 1.3em; }
+      .center-nav--user-dropdown_list .center-nav--user-list_last {
+        margin-top: 10px;
+        width: 258px;
+        margin-left: -20px;
+        padding: 15px 20px;
+        background-color: #ededed; }
+        .center-nav--user-dropdown_list .center-nav--user-list_last ul {
+          padding-left: 0;
+          list-style: none; }
+          .center-nav--user-dropdown_list .center-nav--user-list_last ul li {
+            height: 35px; }
+            .center-nav--user-dropdown_list .center-nav--user-list_last ul li a {
+              color: #393f44;
+              font-size: 1.3em; }
+  .center-nav--spaces-dropdown_list {
+    position: absolute;
+    top: 38px;
+    right: 0;
+    left: auto;
+    padding-bottom: 0; }
+    .center-nav--spaces-dropdown_list .center-nav--user-list {
+      width: 225px;
+      padding-left: 10px;
+      list-style: none; }
+      .center-nav--spaces-dropdown_list .center-nav--user-list ul {
         padding-left: 10px;
         list-style: none; }
-        .center-nav--spaces-dropdown_list .center-nav--user-list ul {
-          padding-left: 10px;
-          list-style: none; }
-        .center-nav--spaces-dropdown_list .center-nav--user-list_last {
-          width: 225px;
-          margin-left: -10px;
-          padding: 5px;
-          background-color: #ededed; }
-          .center-nav--spaces-dropdown_list .center-nav--user-list_last ul {
-            padding-left: 15px; }
-            .center-nav--spaces-dropdown_list .center-nav--user-list_last ul li {
-              display: grid;
-              grid-template-columns: 1fr;
-              grid-template-rows: auto;
-              align-items: baseline;
-              padding-top: 5px;
-              padding-bottom: 5px; }
-        .center-nav--spaces-dropdown_list .center-nav--user-list .recent-spaces-list_empty {
-          color: transparent; }
-        .center-nav--spaces-dropdown_list .center-nav--user-list .recent-spaces-list li {
-          display: grid;
-          grid-template-columns: 20px 1fr;
-          grid-template-rows: auto;
-          align-items: baseline;
-          padding-top: 5px;
-          padding-bottom: 5px; }
-          .center-nav--spaces-dropdown_list .center-nav--user-list .recent-spaces-list li a {
-            margin-top: -5px;
-            color: #030303;
-            font-size: 1.2em; }
-    .center-nav--center {
-      margin: auto;
-      height: 48px;
-      padding-top: 10px; }
-      .center-nav--center_vertical-divider {
-        padding-right: 5px;
-        padding-left: 5px; }
-      .center-nav--center_icon {
-        border-right: 1px solid #d1d1d1; }
-      .center-nav--center_links {
-        margin-top: 9px;
-        padding-bottom: 5px !important;
-        font-size: 1.2em !important;
-        font-weight: 700; }
-        .center-nav--center_links.active {
-          border-bottom: 3px solid #0088ce;
-          color: #0088ce !important; }
-    .center-nav--right {
-      display: inline-flex;
-      justify-content: space-evenly; }
-      .center-nav--right_icon {
-        border-right: 1px solid #d1d1d1; }
-    .center-nav--divider {
-      color: #fff; }
-  .secondary-nav {
-    background-color: #303030;
-    height: 40px; }
-    .secondary-nav--links a {
-      margin-right: 10px;
-      margin-left: 10px; }
-    .secondary-nav--links .btn {
+      .center-nav--spaces-dropdown_list .center-nav--user-list_last {
+        width: 225px;
+        margin-left: -10px;
+        padding: 5px;
+        background-color: #ededed; }
+        .center-nav--spaces-dropdown_list .center-nav--user-list_last ul {
+          padding-left: 15px; }
+          .center-nav--spaces-dropdown_list .center-nav--user-list_last ul li {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+            align-items: baseline;
+            padding-top: 5px;
+            padding-bottom: 5px; }
+      .center-nav--spaces-dropdown_list .center-nav--user-list .recent-spaces-list_empty {
+        color: transparent; }
+      .center-nav--spaces-dropdown_list .center-nav--user-list .recent-spaces-list li {
+        display: grid;
+        grid-template-columns: 20px 1fr;
+        grid-template-rows: auto;
+        align-items: baseline;
+        padding-top: 5px;
+        padding-bottom: 5px; }
+        .center-nav--spaces-dropdown_list .center-nav--user-list .recent-spaces-list li a {
+          margin-top: -5px;
+          color: #030303;
+          font-size: 1.2em; }
+  .center-nav--center {
+    margin: auto;
+    height: 48px;
+    padding-top: 10px; }
+    .center-nav--center_vertical-divider {
+      padding-right: 5px;
+      padding-left: 5px; }
+    .center-nav--center_icon {
+      border-right: 1px solid #d1d1d1; }
+    .center-nav--center_links {
+      margin-top: 9px;
+      padding-bottom: 5px !important;
       font-size: 1.2em !important;
-      color: #fff; }
-    .secondary-nav--links .active {
-      color: #0088ce;
-      border-bottom: 3px solid #0088ce; }
+      font-weight: 700; }
+      .center-nav--center_links.active {
+        border-bottom: 3px solid #0088ce;
+        color: #0088ce !important; }
+  .center-nav--right {
+    display: inline-flex;
+    justify-content: space-evenly; }
+    .center-nav--right_icon {
+      border-right: 1px solid #d1d1d1; }
+  .center-nav--divider {
+    color: #fff; } }
+
+@media (min-width: 900px) and (max-width: 2440px) {
+  .mobile-hide {
+    display: none; }
+  .center-nav--user-dropdown_list {
+    left: -40px;
+    padding-bottom: 0;
+    background-color: #fff; }
+    .center-nav--user-dropdown_list .center-nav--user-list {
+      padding-left: 20px;
+      list-style: none; }
+      .center-nav--user-dropdown_list .center-nav--user-list p {
+        margin-bottom: 0; }
+      .center-nav--user-dropdown_list .center-nav--user-list_section {
+        margin-top: 10px; }
+        .center-nav--user-dropdown_list .center-nav--user-list_section .fa-check-circle-o {
+          color: #3f9c35; }
+        .center-nav--user-dropdown_list .center-nav--user-list_section ul {
+          padding-left: 0;
+          list-style: none; }
+          .center-nav--user-dropdown_list .center-nav--user-list_section ul li {
+            height: 35px; }
+            .center-nav--user-dropdown_list .center-nav--user-list_section ul li a {
+              color: #393f44;
+              font-size: 1.3em; }
+      .center-nav--user-dropdown_list .center-nav--user-list_last {
+        margin-top: 10px;
+        width: 258px;
+        margin-left: -20px;
+        padding: 15px 20px;
+        background-color: #ededed; }
+        .center-nav--user-dropdown_list .center-nav--user-list_last ul {
+          padding-left: 0;
+          list-style: none; }
+          .center-nav--user-dropdown_list .center-nav--user-list_last ul li {
+            height: 35px; }
+            .center-nav--user-dropdown_list .center-nav--user-list_last ul li a {
+              color: #393f44;
+              font-size: 1.3em; }
+  .center-nav--spaces-dropdown_list {
+    position: absolute;
+    top: 38px;
+    right: 0;
+    left: auto;
+    padding-bottom: 0; }
+    .center-nav--spaces-dropdown_list .center-nav--user-list {
+      width: 225px;
+      padding-left: 10px;
+      list-style: none; }
+      .center-nav--spaces-dropdown_list .center-nav--user-list ul {
+        padding-left: 10px;
+        list-style: none; }
+      .center-nav--spaces-dropdown_list .center-nav--user-list_last {
+        width: 225px;
+        margin-left: -10px;
+        padding: 5px;
+        background-color: #ededed; }
+        .center-nav--spaces-dropdown_list .center-nav--user-list_last ul {
+          padding-left: 15px; }
+          .center-nav--spaces-dropdown_list .center-nav--user-list_last ul li {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+            align-items: baseline;
+            padding-top: 5px;
+            padding-bottom: 5px; }
+      .center-nav--spaces-dropdown_list .center-nav--user-list .recent-spaces-list_empty {
+        color: transparent; }
+      .center-nav--spaces-dropdown_list .center-nav--user-list .recent-spaces-list li {
+        display: grid;
+        grid-template-columns: 20px 1fr;
+        grid-template-rows: auto;
+        align-items: baseline;
+        padding-top: 5px;
+        padding-bottom: 5px; }
+        .center-nav--spaces-dropdown_list .center-nav--user-list .recent-spaces-list li a {
+          margin-top: -5px;
+          color: #030303;
+          font-size: 1.2em; }
+  .center-nav--center {
+    margin: auto;
+    height: 48px;
+    padding-top: 10px; }
+    .center-nav--center_vertical-divider {
+      padding-right: 5px;
+      padding-left: 5px; }
+    .center-nav--center_icon {
+      border-right: 1px solid #d1d1d1; }
+    .center-nav--center_links {
+      margin-top: 9px;
+      padding-bottom: 5px !important;
+      font-size: 1.2em !important;
+      font-weight: 700; }
+      .center-nav--center_links.active {
+        border-bottom: 3px solid #0088ce;
+        color: #0088ce !important; }
+  .center-nav--right {
+    display: inline-flex;
+    justify-content: space-evenly; }
+    .center-nav--right_icon {
+      border-right: 1px solid #d1d1d1; }
+  .center-nav--divider {
+    color: #fff; }
   .left-dropdown {
     position: absolute;
     top: 38px;
@@ -2461,7 +2587,7 @@
     left: -10px !important;
     padding-bottom: 0; } }
 
-.nav-grid, .nav-grid-secondary, .nav-grid-mobile {
+.nav-grid, .nav-grid-secondary {
   display: grid;
   grid-template-columns: 100px 1fr 100px; }
 
@@ -2487,6 +2613,17 @@
   .nav-grid-secondary .secondary-nav--links {
     display: flex;
     margin: auto; }
+
+@media (max-width: 900px) {
+  .nav-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); }
+  .nav-grid-left .center-nav--divider {
+    margin: auto; }
+  .nav-grid-center {
+    margin: 0 auto; }
+  .nav-grid-right .center-nav--divider {
+    margin: auto; } }
 
 h1 {
   font-size: 2em;
