--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -5,7 +5,6 @@
 .nav-grid {
   @extend %base-grid;
   &-left {
-    // grid-column: 1 / 3;
     display: grid;
     grid-template-columns: 40px 20px 40px;
     .center-nav--divider {
@@ -33,6 +32,25 @@
     margin: auto;
   }
 }
-.nav-grid-mobile {
-  @extend %base-grid;
+@media (max-width: 900px) {
+  %mobile-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .nav-grid {
+    @extend %mobile-grid;
+    &-left {
+      .center-nav--divider {
+        margin: auto;
+      }
+    }
+    &-center {
+      margin: 0 auto;
+    }
+    &-right {
+      .center-nav--divider {
+        margin: auto;
+      }
+    }
+  }
 }
