--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -31,6 +31,9 @@
   }
 }
 @media (max-width: 900px) {
+  .desktop-hide {
+    display: none;
+  }
   .nav-grid-right {
     display: none !important;
   }
